data clean and post-processing clm

--- a/examples/transformers/question-answering/config/lock_config.json
+++ b/examples/transformers/question-answering/config/lock_config.json
@@ -1,5 +1,5 @@
 {
-  "not_to_prune": ["qa_outputs", "pooler", "teacher"],
+  "not_to_prune": ["qa_outputs", "pooler", "teacher", "vocab"],
   "prune_layer_types": {
     "Linear": {"name": "weight"},
     "QuantizedLinear": {"name": "weight"}
